# mob-rs

./: .editorconfig  .gitignore  .insta.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  REUSE.toml  dprint.json  mob.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: release.yaml  test.yaml
src/: lib.rs  main.rs  net.rs
src/cli/: build.rs  cmake.rs  git.rs  global.rs  mod.rs  pr.rs  release.rs  tests.rs  tx.rs
src/cmd/: build.rs  config.rs  git.rs  list.rs  mod.rs  tx.rs
src/config/: loader.rs  merge.rs  mod.rs  paths.rs  tests.rs  types.rs
src/core/: mod.rs
src/error/: mod.rs  tests.rs
src/git/: cmd.rs  discovery.rs  mod.rs  ops.rs  query.rs  tests.rs
src/logging/: mod.rs  tests.rs
src/task/: mod.rs  tests.rs
src/utility/: mod.rs
tests/: integration_cli.rs  integration_config.rs  integration_git.rs  integration_net.rs  integration_release.rs  integration_task.rs
tests/snapshots/: integration_cli__build_args_to_config_overrides.snap  integration_cli__cli_build_all_rebuild_flags.snap  integration_cli__cli_build_new_flag.snap  integration_cli__cli_build_no_args.snap  integration_cli__cli_build_task_phase_flags.snap  integration_cli__cli_build_with_tasks.snap  integration_cli__cli_cmake_config_install_prefix.snap  integration_cli__cli_cmake_config_prefix_path.snap  integration_cli__cli_git_branches_all.snap  integration_cli__cli_git_ignore_ts_off.snap  integration_cli__cli_git_ignore_ts_on.snap  integration_cli__cli_git_set_remotes.snap  integration_cli__cli_global_options_dry_run.snap  integration_cli__cli_global_options_log_levels.snap  integration_cli__cli_global_options_multiple_inis.snap  integration_cli__cli_global_options_prefix.snap  integration_cli__cli_global_options_set_options.snap  integration_cli__cli_global_options_to_config_overrides.snap  integration_cli__cli_list_aliases_only.snap  integration_cli__cli_list_all_tasks.snap  integration_cli__cli_pr_find.snap  integration_cli__cli_pr_pull.snap  integration_cli__cli_release_devbuild.snap  integration_cli__cli_release_official.snap  integration_cli__cli_version_command.snap  integration_config__config_aliases.snap  integration_config__config_builder_layered.snap  integration_config__config_builder_set_override.snap  integration_config__config_cmake_defaults.snap  integration_config__config_cmake_full.snap  integration_config__config_cmake_host.snap  integration_config__config_cmake_install_message_always.snap  integration_config__config_cmake_install_message_lazy.snap  integration_config__config_default_values.snap  integration_config__config_parse_minimal.snap  (+35 more)
(+223 files in other folders)
